[package]
name = "RustBackendTest"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = "0.3.19"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
tokio-postgres = "0.7.13"